# send2kindle

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  email.rs  files.rs  main.rs
