[package]
name = "send2kindle"
version = "0.1.0"
edition = "2024"
authors = ["Carlos Menezes <talk@carlos-menezes.com>"]
description = "`send2kindle` is a command-line utility to send documents to your Kindle."
repository = "https://github.com/carlos-menezes/send2kindle"

[[bin]]
name = "send2kindle"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
lettre = "0.11"
